<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A3F9BCAA"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="349dp"
        android:layout_height="65dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="46dp"
        android:gravity="center"
        android:text="@string/tvTitle"
        android:textColor="#F37C7E"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ivPig"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivPig"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="39dp"
        android:contentDescription="@string/ivPigDscription"
        app:layout_constraintBottom_toTopOf="@+id/btStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:srcCompat="@drawable/piggy" />

    <Button
        android:id="@+id/btStart"
        android:layout_width="213dp"
        android:layout_height="76dp"
        android:layout_marginBottom="97dp"
        android:backgroundTint="#F47C7E"
        android:text="@string/btStart"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivPig" />
</androidx.constraintlayout.widget.ConstraintLayout>